RESOLVED FIXED 202270
IDBRequest should not prevent a page from entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=202270
Summary IDBRequest should not prevent a page from entering the back/forward cache
Chris Dumez
Reported 2019-09-26 08:40:33 PDT
IDBRequest should not prevent a page from entering the back/forward cache. This sometimes prevents weather.com from entering the back/forward cache.
Attachments
Patch (4.54 KB, patch)
2019-09-26 08:47 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-09-26 08:40:51 PDT
Chris Dumez
Comment 2 2019-09-26 08:47:31 PDT
youenn fablet
Comment 3 2019-09-27 07:48:52 PDT
Comment on attachment 379644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=379644&action=review > Source/WebCore/Modules/indexeddb/IDBRequest.cpp:265 > + return true; This change also affects IDBOpenDBRequest. I think your reasoning for IDBRequest also applies to IDBOpenDBRequest (events are enqueued). It might be good to double check this though.
Chris Dumez
Comment 4 2019-09-27 08:20:26 PDT
Comment on attachment 379644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=379644&action=review >> Source/WebCore/Modules/indexeddb/IDBRequest.cpp:265 >> + return true; > > This change also affects IDBOpenDBRequest. > I think your reasoning for IDBRequest also applies to IDBOpenDBRequest (events are enqueued). > It might be good to double check this though. Yes, I have checked that IDBOpenDBRequest properly queues its upgradeneeded / blocked events as well.
Chris Dumez
Comment 5 2019-09-27 08:56:07 PDT
Comment on attachment 379644 [details] Patch Clearing flags on attachment: 379644 Committed r250425: <https://trac.webkit.org/changeset/250425>
Chris Dumez
Comment 6 2019-09-27 08:56:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.